--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.20",
     "react": "^18.2.0",
