--- a/e-commerce/package.json
+++ b/e-commerce/package.json
@@ -17,10 +17,14 @@
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.20",
+    "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-alice-carousel": "^2.8.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.1"
+    "react-redux": "^9.0.4",
+    "react-router-dom": "^6.20.1",
+    "redux": "^5.0.0",
+    "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
